[package]
authors = ["Erik Johnston"]
edition = "2018"
name = "github-matrix-project"
version = "0.2.3"

[dependencies]
serde = "1.0.124"
serde_derive = "1.0.124"
serde_json = "1.0.64"
tokio = { version = "1.3.0", features = ["full"] }
reqwest = { version = "0.11.5", features = ["json"] }
anyhow = "1.0.38"
tracing-subscriber = "0.2.25"
tracing-actix-web = "0.4.0-beta.14"
tracing = "0.1"
actix-web = "4.0.0-beta.9"
reqwest-tracing = "0.1.3"
reqwest-middleware = "0.1.2"
