[package]
authors = ["Erik Johnston"]
edition = "2018"
name = "github-matrix-project"
version = "0.2.4"

[dependencies]
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
reqwest = { version = "0.11.9", features = ["json"] }
anyhow = "1.0.55"
tracing-subscriber = "0.3.9"
tracing-actix-web = "0.5.0-rc.3"
tracing = "0.1.31"
actix-web = "4.0.0-rc.3"
reqwest-tracing = "0.2.1"
reqwest-middleware = "0.1.5"
