[package]
authors = ["Erik Johnston"]
edition = "2018"
name = "github-matrix-project"
version = "0.2.10"

[dependencies]
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
reqwest = { version = "0.13.3", features = ["json"] }
anyhow = "1.0.102"
tracing-subscriber = "0.3.23"
tracing-actix-web = "0.7.21"
tracing = "0.1.44"
actix-web = "4.13.0"
reqwest-tracing = "0.7.0"
reqwest-middleware = { version = "0.5.1", features = ["json"] }
chrono = "0.4.44"
tzfile = "0.1.3"
itertools = "0.14.0"
